new java opts heap size to support large file