@@ -60,11 +60,9 @@
 						<workingDirectory>target</workingDirectory>
 						<!-- add native library paths to LD_LIBRARY_PATH, e.g., -->
 						<!-- libjhdf5.so is /usr/lib/jni (Ubuntu) /usr/lib64/jhdf5 (amzn Linux) -->
-						<argLine>-Xms1024m -Xmx4096m
+						<argLine>-Xmx6G -XX:MaxPermSize=128M -XX:+UseCompressedOops
 							-Djava.library.path=${env.HADOOP_HOME}/lib/native:${env.LD_LIBRARY_PATH}:${basedir}/lib</argLine>
 						<additionalClasspathElements>
-							<!-- <additionalClasspathElement>${env.JAVACV_BIN_HOME}/javacv.jar</additionalClasspathElement> 
-								<additionalClasspathElement>${env.JAVACV_BIN_HOME}/javacpp.jar</additionalClasspathElement> -->
 							<additionalClasspathElement>${env.JAVACV_BIN_HOME}/javacv-linux-x86_64.jar</additionalClasspathElement>
 							<additionalClasspathElement>${env.JAVACV_CPP_HOME}/opencv-2.4.8-linux-x86_64.jar</additionalClasspathElement>
 							<additionalClasspathElement>${env.JAVACV_CPP_HOME}/ffmpeg-2.1.1-linux-x86_64.jar</additionalClasspathElement>
